--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 radius: 15, // meters
                 color: 'blue',
                 description: 'On your left is Jalebi Haleem. The finest barber in whole of the west',
-                image: 'https://example.com/central_park.jpg' // Replace with actual image URL
+                image: 'https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D-2fQ4mS9jK8&psig=AOvVaw1inhqEmBnqeQQTEw-wVpkS&ust=1743867465256000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjH69ravowDFQAAAAAdAAAAABAE' // Replace with actual image URL
             },
             {
                 id: 'toyota_park',
